# ddsp-svc-simple

./: .gitignore  debug_infer.py  main.py  opencode.jsonc  pyproject.toml  webui.py
configs/: default.yaml
ddsp_svc/: config.py  dataset.py  device.py  infer.py  preprocess.py  train.py
ddsp_svc/extractors/: encoder.py  f0.py  volume.py
ddsp_svc/extractors/rmvpe/: inference.py
ddsp_svc/models/: __init__.py  ddsp.py  lynxnet.py  rectified_flow.py  unit2wav.py  vocoder.py
