[project]
name = "ddsp-svc"
version = "0.1.0"
description = "DDSP-SVC - Singing Voice Conversion"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "gradio>=4",
    "librosa",
    "soundfile",
    "pyyaml",
    "pydantic>=2",
    "praat-parselmouth",
    "resampy",
    "transformers",
    "loguru",
    "tqdm",
    "einops",
    "matplotlib",
    "tensorboard",
    "setuptools>=83.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124-mirror"
url = "https://mirrors.tuna.tsinghua.edu.cn/pytorch-wheels/cu124"
explicit = true

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124-mirror" }, { index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124-mirror" }, { index = "pytorch-cu124" }]
